# AI

./: .gitattributes  .gitignore  DECLARATION.md  Dockerfile  README.md  UnifiedAI.md  brain_engine.py  build_debian_chatgpt_iso.sh  conftest.py  docker-compose.yml  ethics_rules.json  pull_status.txt  requirements-dev.txt  requirements.txt  simulate_sre_session.py  sre_chat_gui.py  sre_engine.py  unifai_web.py  unified_ai.py  unifiedai.py  united_ai_gui.py  webcam_magnifier.py
WizardWarI/: README.md  WizardWarI.uproject  build.sh
ai_gui/: app.py  chatgpt.desktop  chatgpt_desktop.py  image_engine.py  model.py  network_interface.py  setup_codex_env.sh
bootloader/: README.md  bootloader.asm
datasheets/: optical_engine_datasheet.json
fastapi/: __init__.py  testclient.py
hp_boot_video/: app.py
html/: index.html  unifai_chatbot.html  webproxy.html
neocities_forum/: README.md  index.html  server.py
rust-ftp-suite/: README.md
rust-ftp-suite/app/src-tauri/: Cargo.toml  tauri.conf.json
rust-ftp-suite/app/src-tauri/src/: config.rs  logging.rs  main.rs  ui_bridge.rs
rust-ftp-suite/app/src-tauri/src/client/: ftp_client.rs  mod.rs
rust-ftp-suite/app/src-tauri/src/crypto/: e2e.rs  keys.rs  mod.rs
rust-ftp-suite/app/src-tauri/src/links/: qr.rs
rust-ftp-suite/app/src-tauri/src/server/: mod.rs  start.rs  tls.rs  upnp.rs  users.rs
rust-ftp-suite/app/src-tauri/src/transfers/: job.rs  manager.rs  mod.rs
tests/: replicator_test.py  test_api.py  test_aura.py  test_lifespan.py  test_resource_parity.py  test_speech.py  test_sre_engine.py  test_unifai_web.py  (+1 more)
(+62 files in other folders)
