[package]
name = "rust-ftp-suite"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "1"
libunftp = "0.19"
unftp-sbe-fs = "0.3"
suppaftp = { version = "5", features = ["async"] }
rustls = "0.21"
rcgen = "0.11"
age = "0.9"
qrcode = "0.7"
image = "0.24"
igd = "0.12"
directories = "5"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bcrypt = "0.15"
rand = "0.8"
serde_json = "1"
rayon = "1"

[dev-dependencies]
assert_fs = "1"
